--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <img src="https://avatars.githubusercontent.com/u/0000000?v=4" alt="Profile Picture" />
     <h1>Raja Pattem</h1>
     <p>👨‍💻 Frontend Developer | Passionate about Open Source</p>
-    <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+    <a href="https://github.com/Rajapattem" target="_blank">GitHub</a>
     <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
     <a href="mailto:rajapattem23@gmail.com.com">Email</a>
   </div>
